--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
-AM_CPPFLAGS = $(CXX11_FLAGS) -I../protobufs
+AM_CPPFLAGS = $(CXX11_FLAGS) -I../protobufs $(PYTHON_CFLAGS)
 AM_CXXFLAGS = $(PICKY_CXXFLAGS)
-LDADD = ../protobufs/libremyprotos.a -lm $(protobuf_LIBS)
+LDADD = ../protobufs/libremyprotos.a -lm $(protobuf_LIBS) $(PYTHON_LIBS)
 
-bin_PROGRAMS = remy remy-poisson sender-runner sender-logger scoring-example configuration inspect-config inspect-simulationsdata
+bin_PROGRAMS = remy remy-unicorn remy-poisson sender-runner sender-logger scoring-example configuration inspect-config inspect-simulationsdata
 
 common_source = delay.hh evaluator.cc evaluator.hh                 \
 	exponential.hh link.hh link-templates.cc stochastic-loss.hh                      \
@@ -17,13 +17,17 @@ common_source = delay.hh evaluator.cc evaluator.hh                 \
 	configrange.hh configrange.cc                              \
 	simulationresults.hh simulationresults.cc                      \
     action.hh fin.hh fin.cc fintree.cc fintree.hh  	               \
-    fish.hh fish.cc fish-templates.cc
+    fish.hh fish.cc fish-templates.cc unicorn-templates.cc
 
 noinst_LIBRARIES = libremycore.a
 libremycore_a_SOURCES = $(common_source)
 
 remy_SOURCES = $(common_source) remy.cc ratbreeder.cc ratbreeder.hh \
 	breeder.cc breeder.hh
+
+remy_unicorn_SOURCES = $(common_source) remy-unicorn.cc unicornbreeder.cc unicornbreeder.hh \
+	breeder.cc breeder.hh unicornfarm.cc unicornfarm.hh unicornevaluator.cc unicornevaluator.hh \
+	unicorn.hh unicorn.cc
 
 remy_poisson_SOURCES = $(common_source) remy-poisson.cc breeder.cc breeder.hh fishbreeder.cc fishbreeder.hh
 
