--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,8 @@ AM_CPPFLAGS = $(CXX11_FLAGS) -I../protobufs
 AM_CXXFLAGS = $(PICKY_CXXFLAGS) -g $(PYTHON_CFLAGS)
 LDADD = ../protobufs/libremyprotos.a -lm $(protobuf_LIBS) $(PYTHON_LIBS)
 
-bin_PROGRAMS = remy remy-unicorn remy-poisson sender-runner sender-logger scoring-example configuration inspect-config inspect-simulationsdata
+#bin_PROGRAMS = remy remy-unicorn remy-poisson sender-runner sender-logger scoring-example configuration inspect-config inspect-simulationsdata
+bin_PROGRAMS = remy-unicorn
 
 common_source = delay.hh evaluator.cc evaluator.hh                 \
 	exponential.hh link.hh link-templates.cc stochastic-loss.hh    \
